# volumetric_display

./: README.md
Blender/!3D Printing/Semrah V1/: BatteryHolder.stl  BeforeModifierApplications.blend  BeforeModifierApplications.blend1  BeforeModifierApplications.stl  MainHolderTop.stl  MotorCap.stl  MotorCapBigMotor.stl  MotorCapSmallMotor.stl  OfficialAfterModifierApplications.blend  OfficialAfterModifierApplications.blend1  OfficialAfterModifierApplications2.blend  OfficialAfterModifierApplications2.blend1  ProjectHolder.3mf  ProjectHolder.stl  ProjectHolderBottom.stl  ProjectHolderTop.stl  ProjectHolderTopText.stl  Stand.3mf  Stand.blend  Stand.blend1  Stand.stl
Blender/!Volumetric Blender Data/BouncyBall/: BouncyBall.blend1
Blender/!Volumetric Blender Data/BouncyBall/Header Data/: ImageData.h
Blender/!Volumetric Blender Data/BouncyBall/Text Data/: Output.txt
Blender/!Volumetric Blender Data/Cube/: Header DataImageData.h  VolumetricCube2.blend  VolumetricCube2.blend1
Blender/!Volumetric Blender Data/Cube/Header Data/: ImageData.h
Blender/!Volumetric Blender Data/Cube/Text Data/: Output.txt
Blender/!Volumetric Blender Data/CubeRotated/: VolumetricCube2.blend
Blender/!Volumetric Blender Data/Doughnut/: Doughnut.blend  Doughnut.blend1
Blender/!Volumetric Blender Data/Doughnut/Header Data/: ImageData.h
Blender/!Volumetric Blender Data/Doughnut/Text Data/: Output.txt
Blender/!Volumetric Blender Data/Fire/: Fire.blend  Fire.blend1
Blender/!Volumetric Blender Data/Fire/Header Data/: ImageData.h
Blender/!Volumetric Blender Data/Fire/Text Data/: Output.txt
Blender/!Volumetric Blender Data/Fireworks/: BouncyBall.blend  BouncyBall.blend1
Blender/!Volumetric Blender Data/Fireworks/Header Data/: ImageData.h
Blender/!Volumetric Blender Data/Fireworks/Text Data/: Output.txt
Blender/!Volumetric Blender Data/Fireworks/blendcache_BouncyBall/: 46697265776F726B5F656D69747465722E303031_000000_00.bphys  46697265776F726B5F656D69747465722E303031_000120_00.bphys  46697265776F726B5F656D69747465722E303031_000121_00.bphys  46697265776F726B5F656D69747465722E303031_000122_00.bphys  46697265776F726B5F656D69747465722E303031_000123_00.bphys  46697265776F726B5F656D69747465722E303031_000124_00.bphys  46697265776F726B5F656D69747465722E303031_000125_00.bphys  46697265776F726B5F656D69747465722E303031_000126_00.bphys  46697265776F726B5F656D69747465722E303031_000127_00.bphys  46697265776F726B5F656D69747465722E303031_000128_00.bphys  46697265776F726B5F656D69747465722E303031_000129_00.bphys  46697265776F726B5F656D69747465722E303031_000130_00.bphys  46697265776F726B5F656D69747465722E303031_000131_00.bphys  46697265776F726B5F656D69747465722E303031_000132_00.bphys  46697265776F726B5F656D69747465722E303031_000133_00.bphys  46697265776F726B5F656D69747465722E303031_000134_00.bphys  46697265776F726B5F656D69747465722E303031_000135_00.bphys  46697265776F726B5F656D69747465722E303031_000136_00.bphys  46697265776F726B5F656D69747465722E303031_000137_00.bphys  46697265776F726B5F656D69747465722E303031_000138_00.bphys  46697265776F726B5F656D69747465722E303031_000139_00.bphys  46697265776F726B5F656D69747465722E303031_000140_00.bphys  (+80 more)
Blender/!Volumetric Blender Data/FlappyBird/: Sine.blend
Blender/!Volumetric Blender Data/Ripple/: VolumetricCube2.blend  VolumetricCube2.blend1
Blender/!Volumetric Blender Data/SineWave/: Sine.blend1
Blender/!Volumetric Blender Data/SpaceInvaders/: SpaceInvaders.blend
Blender/!Volumetric Blender Data/Straight Cube/: Cube.blend1  VolumetricCube2.blend1
Blender/!Volumetric Blender Data/Text-Intel/: Text.blend  Text.blend1
Blender/!Volumetric Blender Data/VoxelCube/: VoxelCube.blend1
Blender/!Volumetric Blender Data/Water/: VolumetricCube2.blend1
Blender/Cube/: VolumetricCube.blend
Blender/Cube/Converted Images/: 0006.txt  0017.txt  0022.txt
Blender/Cube/Converted Images - Copy/: 0010.txt  0014.txt  0016.txt  0019.txt
Blender/Cube/Frame Changes/: 00040005.txt  00050006.txt  00080009.txt  00090010.txt  00100011.txt  00110012.txt  00130014.txt  00150016.txt  00160017.txt  00180019.txt  00200021.txt
Blender/ImageOptimizer/OptimizationCode/: Class1.cs
Blender/ImageOptimizer/Optimizer/: Optimizer.csproj  Optimizer.sln  Program.cs
Code-Testing/: Water.uf2
Code-Testing/!Display/: display.c  imagedata.h
Code-Testing/!DisplayGPIO/: CMakeLists.txt  GpioMapping.h  display.c  imagedata.h
Code-Testing/!DisplayGPIO/ImageData/: OriginalImageData.h  imagedata.h
Code-Testing/!DisplayGPIO/TimingVerification/: timingverification.c
Code-Testing/!DisplayGPIO/WS2812/: ws2812.c
Code-Testing/!DisplayGPIO/include/Data/: GpioMapping.h  OriginalImageData.h  imagedata.h
Code-Testing/!DisplayGPIO/include/I2C/: DisplayAddons.h
Code-Testing/!DisplayGPIO/include/Initialization/: Initialization.h
Code-Testing/!DisplayGPIO/include/Motor/: Motor.h
Code-Testing/!DisplayGPIO/lib/Initialization/: Initialization.c
Code-Testing/!DisplayGPIO/lib/Motor/: Motor.c
Code-Testing/!DisplayGPIO/lib/RPM/: capture_edge.c  capture_edge.pio  rpm_counter.pio
Code-Testing/!DisplayGPIO/src/: CMakeLists.txt  display.c  displayPIO.c
Code-Testing/!DisplayGPIO/test/: CMakeLists.txt  displayPIO.c  test_flashingexample.c  test_logging.c  test_pwm.c
Code-Testing/!DisplayV2/: CMakeLists.txt  DisplayAddons.c  display.c  imagedata.h  timingverification.c  timingverification.h
Code-Testing/LED Onboard/: CMakeLists.txt  display.c
Code-Testing/Matrix/pico-ledarray/: CMakeLists.txt  ledarray.c
Code-Testing/Matrix/pico-ledarray2/: CMakeLists.txt  imagedata.h  ledarray.c  ledarray2 copy.c  ledarray2TestBed.c  ledarrayworking.c
Code-Testing/Motor/: CMakeLists.txt  DisplayAddons.c  IS31FL3731.c  IS31FL3731.h  display.c
Code-Testing/Pico/RP2040-Zero/C/: CMakeLists.txt
Code-Testing/Pico/pico-testing/: CMakeLists.txt  CMakeListsOLD.txt  TestDisplay.c
PCB/: PCB_v4.brd
PCB/Component Files/1N5819/: DO-41_STM.stl
PCB/Component Files/RC1206FR_0710KL/: RC1206N_YAG.stl
PCB/Component Files/TCRT5000/: 80154_TCRT5000_3D_Models.stl
Presentation/ECE3992/Stock Images/: IMG_7638.mov
(+4436 files in other folders)
